--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,5 +8,10 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     %header
-      %p patron
+      %p PATRON
+      %p Search
+      %p Start my page
+      %p Explore Creaters
+      %p Sign up
+      %p Log in
     = yield
