--- a/app/assets/stylesheets/entrances.scss
+++ b/app/assets/stylesheets/entrances.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the entrances controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+header{
+  background-color: white;
+  display: flex;
+  p{
+    margin-left:10px;
+  }
+  
+}
