--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,11 +7,12 @@
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
-    %header
+    .header
       %p PATRON
-      %p Search
-      %p Start my page
-      %p Explore Creaters
-      %p Sign up
-      %p Log in
+      .header__light
+        %p Search
+        %p Start my page
+        %p Explore Creaters
+        %p Sign up
+        %p Log in
     = yield
