--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,6 @@
         %p Search
         %p Start my page
         %p Explore Creaters
-        %p Sign up
+        = link_to "Sign up", new_user_path
         %p Log in
     = yield
