Login sing up link

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
         %p Search
         %p Start my page
         %p Explore Creaters
-        = link_to "Sign up", new_user_path
+        = link_to "Sign up", new_user_registration_path
+        = link_to "Log in", new_user_session_path
         %p Log in
     = yield
