ログイン機能

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -15,5 +15,8 @@
         %p Explore Creaters
         = link_to "Sign up", new_user_registration_path
         = link_to "Log in", new_user_session_path
+        = link_to "Sign out", destroy_user_session_path, method: :delete
         %p Log in
+    -if user_signed_in?
+      %p こんにちは #{current_user.username} 
     = yield
