name to username

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
       %p PATRON
       .header__light
         = form_tag('/search', method: "post") do
-          = text_field :user, :name
+          = text_field :user, :username
         %p Start my page
         %p Explore Creaters
         = link_to "Sign up", new_user_registration_path
