support table にテータ入れる昨日

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,4 @@
 %p #{@user.username}さんのページ
 
-= form_for [@user, @support], 
+= form_for [@user, @support], url: supports_path(@user) do |f|
+  = f.submit "パトロンになる"
