サポート済みかの真偽

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,7 @@
 %p #{@user.username}さんのページ
 
-= form_for [@user, @support], url: supports_path(@user) do |f|
-  = f.submit "パトロンになる"
+- if @is_supported
+  %p パトロンを解除する
+- else
+  = form_for [@user, @support], url: supports_path(@user) do |f|
+    = f.submit "パトロンになる"
